--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,18 @@
             <!--<artifactId>log4j</artifactId>-->
             <!--<version>1.2.17</version>-->
         <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
 
 </project>
